changed atomic proxy to use pre-built container images

--- a/roles/atomic_proxy/templates/systemd/ctr-proxy-1.service.j2
+++ b/roles/atomic_proxy/templates/systemd/ctr-proxy-1.service.j2
@@ -1,5 +1,3 @@
-
-
 [Unit]
 Description=Container proxy-1
 
@@ -14,9 +12,8 @@ ExecStartPre=-/usr/bin/docker rm "proxy-1"
 ExecStart=/usr/bin/docker run --rm --name "proxy-1"                           \
           --volumes-from proxy-shared-data-1                                  \
           -a stdout -a stderr -p 80:80 -p 443:443 -p 4999:4999                \
-          "proxy:latest"
+          "docker-registry.ops.rhcloud.com/oso-v2-proxy:{{ oo_env }}"
 
-ExecStartPost=-/usr/bin/gear init --post "proxy-1" "proxy:latest"
 ExecReload=-/usr/bin/docker stop "proxy-1"
 ExecReload=-/usr/bin/docker rm "proxy-1"
 ExecStop=-/usr/bin/docker stop "proxy-1"
@@ -26,12 +23,10 @@ WantedBy=container.target
 
 # Container information
 X-ContainerId=proxy-1
-X-ContainerImage=proxy:latest
+X-ContainerImage=docker-registry.ops.rhcloud.com/oso-v2-proxy:{{ oo_env }}
 X-ContainerUserId=
 X-ContainerRequestId=LwiWtYWaAvSavH6Ze53QJg
 X-ContainerType=simple
 X-PortMapping=80:80
 X-PortMapping=443:443
 X-PortMapping=4999:4999
-
-
