--- a/roles/atomic_proxy/templates/systemd/ctr-proxy-puppet-1.service.j2
+++ b/roles/atomic_proxy/templates/systemd/ctr-proxy-puppet-1.service.j2
@@ -1,5 +1,3 @@
-
-
 [Unit]
 Description=Container proxy-puppet-1
 
@@ -17,9 +15,9 @@ ExecStart=/usr/bin/docker run --rm --name "proxy-puppet-1"                      
           -v /var/lib/docker/volumes/proxy_puppet/var/lib/puppet/ssl:/var/lib/puppet/ssl      \
           -v /var/lib/docker/volumes/proxy_puppet/etc/puppet:/etc/puppet                      \
           -a stdout -a stderr                                                                 \
-          "puppet:latest"
+          "docker-registry.ops.rhcloud.com/oso-v2-puppet:{{ oo_env }}"
+
 # Set links (requires container have a name)
-ExecStartPost=-/usr/bin/gear init --post "proxy-puppet-1" "puppet:latest"
 ExecReload=-/usr/bin/docker stop "proxy-puppet-1"
 ExecReload=-/usr/bin/docker rm "proxy-puppet-1"
 ExecStop=-/usr/bin/docker stop "proxy-puppet-1"
@@ -29,9 +27,7 @@ WantedBy=container.target
 
 # Container information
 X-ContainerId=proxy-puppet-1
-X-ContainerImage=puppet:latest
+X-ContainerImage=docker-registry.ops.rhcloud.com/oso-v2-puppet:{{ oo_env }}
 X-ContainerUserId=
 X-ContainerRequestId=Ky0lhw0onwoSDJR4GK6t3g
 X-ContainerType=simple
-
-
