--- a/roles/atomic_proxy/templates/systemd/ctr-proxy-monitoring-1.service.j2
+++ b/roles/atomic_proxy/templates/systemd/ctr-proxy-monitoring-1.service.j2
@@ -1,5 +1,3 @@
-
-
 [Unit]
 Description=Container proxy-monitoring-1
 
@@ -14,9 +12,12 @@ ExecStartPre=-/usr/bin/docker rm "proxy-monitoring-1"
 ExecStart=/usr/bin/docker run --rm --name "proxy-monitoring-1"                \
           --volumes-from proxy-shared-data-1                                  \
           -a stdout -a stderr                                                 \
-          "monitoring:latest"
+          -e "OO_ENV={{ oo_env }}"                                            \
+          -e "OO_CTR_TYPE=proxy"                                              \
+          -e "OO_ZABBIX_HOSTGROUPS={{ oo_zabbix_hostgroups | join(',') }}"    \
+          -e "OO_ZABBIX_TEMPLATES=Template OpenShift Proxy Ctr"               \
+          "docker-registry.ops.rhcloud.com/oso-v2-monitoring:{{ oo_env }}"
 
-ExecStartPost=-/usr/bin/gear init --post "proxy-monitoring-1" "monitoring:latest"
 ExecReload=-/usr/bin/docker stop "proxy-monitoring-1"
 ExecReload=-/usr/bin/docker rm "proxy-monitoring-1"
 ExecStop=-/usr/bin/docker stop "proxy-monitoring-1"
@@ -26,12 +27,10 @@ WantedBy=container.target
 
 # Container information
 X-ContainerId=proxy-monitoring-1
-X-ContainerImage=monitoring:latest
+X-ContainerImage=docker-registry.ops.rhcloud.com/oso-v2-monitoring:{{ oo_env }}
 X-ContainerUserId=
 X-ContainerRequestId=LwiWtYWaAvSavH6Ze53QJg
 X-ContainerType=simple
 X-PortMapping=80:80
 X-PortMapping=443:443
 X-PortMapping=4999:4999
-
-
