--- a/playbooks/aws/openshift-cluster/templates/user_data.j2
+++ b/playbooks/aws/openshift-cluster/templates/user_data.j2
@@ -1,17 +1,4 @@
 #cloud-config
-yum_repos:
-  jdetiber-copr:
-    name: Copr repo for origin owned by jdetiber
-    baseurl: https://copr-be.cloud.fedoraproject.org/results/jdetiber/origin/epel-7-$basearch/
-    skip_if_unavailable: true
-    gpgcheck: true
-    gpgkey: https://copr-be.cloud.fedoraproject.org/results/jdetiber/origin/pubkey.gpg
-    enabled: true
-
-packages:
-- xfsprogs # can be dropped after docker-storage-setup properly requires it: https://github.com/projectatomic/docker-storage-setup/pull/8
-- docker-storage-setup
-
 mounts:
 - [ xvdb ]
 - [ ephemeral0 ]
@@ -24,6 +11,6 @@ write_files:
   owner: root:root
   permissions: '0644'
 
-runcmd:
-- systemctl daemon-reload
-- systemctl enable lvm2-lvmetad.service docker-storage-setup.service
+{% if deployment_type == 'online' %}
+disable_root: 0
+{% endif %}
