--- a/roles/openshift_master/templates/master.yaml.v1.j2
+++ b/roles/openshift_master/templates/master.yaml.v1.j2
@@ -53,7 +53,7 @@ etcdStorageConfig:
   openShiftStorageVersion: v1
 imageConfig:
   format: {{ openshift.master.registry_url }}
-  latest: true
+  latest: false
 kind: MasterConfig
 kubeletClientInfo:
 {# TODO: allow user specified kubelet port #}
