Bug 1252337 - Fix for quote error in oauthConfig template
https://bugzilla.redhat.com/show_bug.cgi?id=1252337

--- a/roles/openshift_master/templates/v1_partials/oauthConfig.j2
+++ b/roles/openshift_master/templates/v1_partials/oauthConfig.j2
@@ -7,7 +7,7 @@
       url: {{ identity_provider.url }}
 {% for key in ('ca', 'certFile', 'keyFile') %}
 {% if key in identity_provider %}
-      {{ key }}: {{ identity_provider[key] }}"
+      {{ key }}: "{{ identity_provider[key] }}"
 {% endif %}
 {% endfor %}
 {% elif identity_provider.kind == 'LDAPPasswordIdentityProvider' %}
