--- a/roles/openshift_master/templates/master.yaml.v1.j2
+++ b/roles/openshift_master/templates/master.yaml.v1.j2
@@ -100,13 +100,13 @@ policyConfig:
   openshiftInfrastructureNamespace: openshift-infra
   openshiftSharedResourcesNamespace: openshift
 projectConfig:
-  defaultNodeSelector: "{{ openshift.master.default_node_selector | default("") }}"
-  projectRequestMessage: "{{ openshift.master.project_request_message | default("") }}"
-  projectRequestTemplate: "{{ openshift.master.project_request_template | default("") }}"
+  defaultNodeSelector: {{ openshift.master.default_node_selector }}
+  projectRequestMessage: {{ openshift.master.project_request_message }}
+  projectRequestTemplate: {{ openshift.master.project_request_template }}
   securityAllocator:
-    mcsAllocatorRange: "{{ openshift.master.project_request_template | default("s0:/2") }}"
-    mcsLabelsPerProject: "{{ openshift.master.mcs_labels_per_project | default("5") }}"
-    uidAllocatorRange: "{{ openshift.master.uid_allocator_range | default("1000000000-1999999999/10000") }}"
+    mcsAllocatorRange: {{ openshift.master.mcs_allocator_range }}
+    mcsLabelsPerProject: {{ openshift.master.mcs_labels_per_project }}
+    uidAllocatorRange: {{ openshift.master.uid_allocator_range  }}
 routingConfig:
   subdomain:  "{{ openshift.master.default_subdomain | default("") }}"
 serviceAccountConfig:
