fixed some issues to boot VM on GCE
corrected openshift master config, commented infra

correct list and terminate, it was bugged in case where no instance were terminated

Using openshift-sdn for gce

new join_node playbook for gce

openstack/hosts/nova.py is now taking the nova/ini of its directory and not the directory of execution of bin/cluster

add fix of ICMP reject rules

Avoid a recursive loop

Jenkins image was renamed

Default masters to t2.medium instead of t2.small

Fix a minor bug involving AWS ENV Keys

* If a user forgot to set their AWS keys, we'd get a non descriptive error about a variable not being set
* This patch uses the correct variable so the error message is more informative

delete some fix that are needed anymore (selinux, iptables rules for sdn)

GCE : all variables needed are in gce.ini, it will be used by bin/cluster (now check better the presence of gce.init in the default place or use GCE_INI_PATH to locate it ), also by gce.ini

openshift_node_labels : get from oo_option

fix syntax error in bin/cluster

fix lookup for openshift_node_labels

Adding desc, multiplier, and units to zabbix item

Adding capability to have descriptions on triggers

updated triggers and items to have better descriptions and multipliers

Move openshift_data_dir to a fact based on deployment_type

Previously this was being set to /var/lib/origin regardless of deployment_type
which isn't correct given that existing 'enterprise' and 'online' deployments
would have been deployed with /var/lib/openshift

Verify again that ansible version is different than 1.9.0 and 1.9.0.1

bin/cluste does not take -a and -s anymore

fix master_public_api_url : using by default a correct url

Really fixed master public api url this time

Really fixed master public api url this time

uncommented infra deployment like before

fixed again masterpublicurl in a template

README_GCE.md : use GCE_INI_PATH in order to locate gce.ini, update description of gce.ini

--- a/roles/openshift_master/templates/master.yaml.v1.j2
+++ b/roles/openshift_master/templates/master.yaml.v1.j2
@@ -46,7 +46,7 @@ etcdConfig:
     certFile: etcd.server.crt
     clientCA: ca.crt
     keyFile: etcd.server.key
-  storageDirectory: {{ openshift_data_dir }}/openshift.local.etcd
+  storageDirectory: {{ openshift.common.data_dir }}/openshift.local.etcd
 {% endif %}
 etcdStorageConfig:
   kubernetesStoragePrefix: kubernetes.io
