--- a/roles/openshift_master/templates/master.yaml.v1.j2
+++ b/roles/openshift_master/templates/master.yaml.v1.j2
@@ -7,7 +7,7 @@ apiServerArguments: {{ api_server_args }}
 {% endif %}
 assetConfig:
   logoutURL: ""
-  masterPublicURL: {{ openshift.master.public_api_url }}
+  masterPublicURL: https://{{ openshift.master.public_api_url }}
   publicURL: {{ openshift.master.public_console_url }}/
   servingInfo:
     bindAddress: {{ openshift.master.bind_addr }}:{{ openshift.master.console_port }}
@@ -89,7 +89,7 @@ masterClients:
 {# TODO: allow user to set externalKubernetesKubeConfig #}
   externalKubernetesKubeConfig: ""
   openshiftLoopbackKubeConfig: openshift-master.kubeconfig
-masterPublicURL: {{ openshift.master.public_api_url }}
+masterPublicURL: https://{{ openshift.master.public_api_url }}
 networkConfig:
   clusterNetworkCIDR: {{ openshift.master.sdn_cluster_network_cidr }}
   hostSubnetLength: {{ openshift.master.sdn_host_subnet_length }}
