Fix quoting around null

--- a/roles/openshift_master/templates/master.yaml.v1.j2
+++ b/roles/openshift_master/templates/master.yaml.v1.j2
@@ -68,8 +68,8 @@ kubernetesMasterConfig:
   apiLevels:
   - v1beta3
   - v1
-  apiServerArguments: {{ api_server_args if api_server_args is defined else null }}
-  controllerArguments: {{ controller_args if controller_args is defined else null }}
+  apiServerArguments: {{ api_server_args if api_server_args is defined else 'null' }}
+  controllerArguments: {{ controller_args if controller_args is defined else 'null' }}
 {# TODO: support overriding masterCount #}
   masterCount: 1
   masterIP: ""
