--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -27,11 +27,16 @@ defaults
     timeout http-request    10s
     timeout queue           1m
     timeout connect         10s
-    timeout client          1m
-    timeout server          1m
+    timeout client          300s
+    timeout server          300s
     timeout http-keep-alive 10s
     timeout check           10s
     maxconn                 3000
+
+listen stats :9000
+    mode http
+    stats enable
+    stats uri /
 
 {% for frontend in haproxy_frontends %}
 frontend  {{ frontend.name }}
