fix master_public_api_url : using by default a correct url

--- a/roles/openshift_master/templates/v1_partials/oauthConfig.j2
+++ b/roles/openshift_master/templates/v1_partials/oauthConfig.j2
@@ -80,7 +80,7 @@ oauthConfig:
     provider:
 {{ identity_provider_config(identity_provider) }}
 {%- endfor %}
-  masterPublicURL: https://{{ openshift.master.public_api_url }}:8443
+  masterPublicURL: {{ openshift.master.public_api_url }}
   masterURL: {{ openshift.master.api_url }}
   sessionConfig:
     sessionMaxAgeSeconds: {{ openshift.master.session_max_seconds }}
