added dynamic inventory support for single-master clusters

--- a/playbooks/adhoc/s3_registry/s3_registry.j2
+++ b/playbooks/adhoc/s3_registry/s3_registry.j2
@@ -10,7 +10,7 @@ storage:
     accesskey: {{ accesskey }}
     secretkey: {{ secretkey }}
     region: us-east-1
-    bucket: {{ bucketname }}
+    bucket: {{ clusterid }}-docker
     encrypt: true
     secure: true
     v4auth: true
