Removed AWS keys from command line, and substituted with environment variable lookup.

--- a/playbooks/adhoc/s3_registry/s3_registry.j2
+++ b/playbooks/adhoc/s3_registry/s3_registry.j2
@@ -7,8 +7,8 @@ storage:
   cache:
     layerinfo: inmemory
   s3:
-    accesskey: {{ accesskey }}
-    secretkey: {{ secretkey }}
+    accesskey: {{ aws_access_key }}
+    secretkey: {{ aws_secret_key }}
     region: us-east-1
     bucket: {{ clusterid }}-docker
     encrypt: true
