--- a/roles/openshift_master/templates/master.yaml.v1.j2
+++ b/roles/openshift_master/templates/master.yaml.v1.j2
@@ -98,13 +98,13 @@ policyConfig:
   openshiftInfrastructureNamespace: openshift-infra
   openshiftSharedResourcesNamespace: openshift
 projectConfig:
-  defaultNodeSelector: {{ openshift.master.default_node_selector }}
-  projectRequestMessage: {{ openshift.master.project_request_message }}
-  projectRequestTemplate: {{ openshift.master.project_request_template }}
+  defaultNodeSelector: "{{ openshift.master.default_node_selector }}"
+  projectRequestMessage: "{{ openshift.master.project_request_message }}"
+  projectRequestTemplate: "{{ openshift.master.project_request_template }}"
   securityAllocator:
-    mcsAllocatorRange: {{ openshift.master.mcs_allocator_range }}
-    mcsLabelsPerProject: {{ openshift.master.mcs_labels_per_project }}
-    uidAllocatorRange: {{ openshift.master.uid_allocator_range  }}
+    mcsAllocatorRange: "{{ openshift.master.mcs_allocator_range }}"
+    mcsLabelsPerProject: "{{ openshift.master.mcs_labels_per_project }}"
+    uidAllocatorRange: "{{ openshift.master.uid_allocator_range  }}"
 routingConfig:
   subdomain:  "{{ openshift.master.default_subdomain | default("") }}"
 serviceAccountConfig:
