--- a/roles/openshift_ansible_inventory/templates/multi_ec2.yaml.j2
+++ b/roles/openshift_ansible_inventory/templates/multi_ec2.yaml.j2
@@ -15,10 +15,10 @@ accounts:
     env_vars:
       AWS_ACCESS_KEY_ID: {{ account.env_vars.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: {{ account.env_vars.AWS_SECRET_ACCESS_KEY }}
-{% if account.all_group is defined and account.hostvars is defined%}
+{% if account.all_group is defined and account.extra_vars is defined%}
     all_group: {{ account.all_group }}
-    hostvars:
-{%    for property, value in account.hostvars.items() %}
+    extra_vars:
+{%    for property, value in account.extra_vars.items() %}
       {{ property }}: {{ value }}
 {%    endfor %}
 {% endif %}
