Bug 1277592 - SDN MTU has hardcoded default
- Attempt to detect the MTU of the interface associated with the node IP and
  set the default for sdn_mtu accordingly.  The value can still be overriden
  by users and if detection fails the previous default of 1450 is still used.

--- a/roles/openshift_node/templates/node.yaml.v1.j2
+++ b/roles/openshift_node/templates/node.yaml.v1.j2
@@ -22,6 +22,7 @@ networkConfig:
 {% if openshift.common.use_openshift_sdn %}
    networkPluginName: {{ openshift.common.sdn_network_plugin_name }}
 {% endif %}
+nodeIP: {{ openshift.common.ip }}
 nodeName: {{ openshift.common.hostname | lower }}
 podManifestConfig:
 servingInfo:
