add a volume on master host, in AWS provisioning

--- a/playbooks/aws/openshift-cluster/templates/user_data.j2
+++ b/playbooks/aws/openshift-cluster/templates/user_data.j2
@@ -19,7 +19,7 @@ fs_setup:
   partition: auto
 {% endif %}
 
-{% if type == 'node' %}
+{% if type == 'node' or type == 'master' %}
 mounts:
 - [ xvdb ]
 - [ ephemeral0 ]
